# dense_3D_inputs

./: README.md  convert_model.py  generate_dummy_model.py
tflite_inference_tool/: CMakeLists.txt  main.cpp  run_me.sh
tflite_inference_tool/cmake/: FindTensorFlowLite.cmake
tflite_inference_tool/model_files/: Dense_3D.h5  Dense_3D_tf2-3.tflite  Dense_3D_tf2-9.tflite
